// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#CalendarDay methods should render correctly 1`] = `
<ForwardRef(styled.div)
  colors={Object {}}
  isHidden={false}
>
  <ForwardRef(styled.button)
    colors={Object {}}
    isFuture={false}
    isHidden={false}
    isHovered={false}
    isPast={false}
    isSelected={false}
    number={1}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </ForwardRef(styled.button)>
</ForwardRef(styled.div)>
`;

exports[`#CalendarDay methods should render hidden 1`] = `
<ForwardRef(styled.div)
  colors={Object {}}
  isHidden={true}
>
  <ForwardRef(styled.button)
    colors={Object {}}
    isFuture={false}
    isHidden={true}
    isHovered={false}
    isPast={false}
    isSelected={false}
    number={1}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </ForwardRef(styled.button)>
</ForwardRef(styled.div)>
`;

exports[`#CalendarDay methods should render joined classes 1`] = `
<ForwardRef(styled.div)
  className="hey hou"
  colors={Object {}}
  isHidden={false}
>
  <ForwardRef(styled.button)
    colors={Object {}}
    isFuture={false}
    isHidden={false}
    isHovered={false}
    isPast={false}
    isSelected={false}
    number={1}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </ForwardRef(styled.button)>
</ForwardRef(styled.div)>
`;

exports[`#CalendarDay methods should render with class day 1`] = `
<ForwardRef(styled.div)
  className="day"
  colors={Object {}}
  isHidden={false}
>
  <ForwardRef(styled.button)
    colors={Object {}}
    isFuture={false}
    isHidden={false}
    isHovered={false}
    isPast={false}
    isSelected={false}
    number={1}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </ForwardRef(styled.button)>
</ForwardRef(styled.div)>
`;

exports[`#CalendarDay methods should render with joined & class day 1`] = `
<ForwardRef(styled.div)
  className="hey hou day"
  colors={Object {}}
  isHidden={false}
>
  <ForwardRef(styled.button)
    colors={Object {}}
    isFuture={false}
    isHidden={false}
    isHovered={false}
    isPast={false}
    isSelected={false}
    number={1}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    1
  </ForwardRef(styled.button)>
</ForwardRef(styled.div)>
`;
